--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,12 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "localhost에 대해 Chrome 시작",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "name": "Chrome",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceFolder}/src",
+            "sourceMapPathOverrides": {
+                "webpack:///src/*": "${webRoot}/*"
+            }
         }
     ]
 }
